css-files/home-style.css
/* ... */
.project_text > p {
    margin-top: 3px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: var(--subtitle-color);
}

.tags {
    margin-top: 6px;
    display: flex;
    flex-flow: row wrap;
}

.tag {
    margin-right: 6px;
}

.text-tag {
    border-radius: 5px;
    padding: 2px 5px;
}

.image-tag {
    height: auto;

    display: flex;

    justify-content: center;
    align-items: center;
}

.image-tag > img {
    height: 15px;
    width: 15px;

    image-rendering: pixelated;
    /*image-rendering: crisp-edges;*/
    image-rendering: -moz-crisp-edges;          /* Firefox */
    image-rendering: -o-crisp-edges;            /* Opera */
    -ms-interpolation-mode: nearest-neighbor;   /* IE (non-standard property) */
    /*image-rendering: -webkit-optimize-contrast; !* Webkit (non-standard naming)*!*/
}

.tag > h5 {
    font-weight: normal;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 11px;
}

/*.red {*/
/*    background-color: #ff3535;*/
/*}*/
/*.red > h5 {*/
/*    color: #fff;*/
/*}*/

.gray {
    background-color: var(--tag-gray-background-color);
}
.gray > h5 {
    color: var(--tag-gray-text-color);
}

/*.gray > h5::first-letter {*/
/*     text-transform: capitalize;*/
/* }*/

.mobile-warning {
    background-color: #d77676;
    /*border: red 1px solid;*/
    border-radius: 10px;
    padding: 15px;
    color: white;
    margin-top: 20px;
    display: none;
}

@media (pointer:none), (pointer:coarse) {

    .mobile-warning {
        display: block;
    }

    .project:not(:hover) {
        animation: none;
    }

    .project:hover {
        /*transform: translateY(-5px);*/
        /*transition: transform 0.1s ease;*/
        /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
        animation: none; /*card-fade-in 0.2s forwards;*/
        /*animation-fill-mode: forwards;*/
    }

    .project {
        /*background-color: rgba(51, 51, 51, 0.23);*/
    }

    .mobile {
        display: none;
    }

    .project_text > a > h1 {
        font-size: 30px;
    }

    .project_text > p {
        font-size: 23px;
    }

    .tags {
        margin-top: 9px;
    }

    .tag > h5 {
        font-size: 23px;
    }

    .tag {
        margin-right: 12px;
    }

    .text-tag {
        border-radius: 8px;
        padding: 2px 5px;
    }

    .image-tag > img {
        height: 30px;
        width: 30px;
    }

    #center-column {
        --column-count: 2;
        grid-template-columns: repeat(var(--column-count), var(--mobile-project-width));
    }

    /*!*.project {*!*/
    /*!*    grid-column-start: 1;*!*/
    /*!*    grid-column-end: -1;*!*/
    /*!*}*!*/

    .project_image_container {
        border-radius: calc(var(--border-radius) * 3);
    }


}

